[package]
name = "charwise"
version = "1.0.1"
authors = ["Alexander Mayorov <zerobone21@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "This lightweight, dependency-free rust library provides a convenient way to read characters from different resources."
homepage = "https://github.com/ZeroBone/charwise"
repository = "https://github.com/ZeroBone/charwise"
readme = "README.md"
keywords = ["stream", "character", "lexer", "buffering", "peek"]

[dependencies]

[dev-dependencies]
tempfile = "3.2.0"